[package]
name = "query-report"
version = "0.1.0"
edition = "2021"

[features]
default=[]
tests-online=[]

[dependencies]
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros", "sync"] }
futures-core = { version = "0.3.31" }
async-trait = { version = "0.1.86" }
cursive = { version = "0.21.1" }